# hermes-installer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml  test.yml
hermes_installer/: app.py  cli.py  installer.py  platforms.py  upstream.py
packaging/macos/: entitlements.plist
packaging/windows/: hermes-installer.manifest  version_info.txt
scripts/: build_macos.sh  build_windows.ps1  sign_and_notarize_macos.sh
site/: index.html
tests/: test_installer.py
